Setup initial structure for Flappy Bird game and implement basic gameplay mechanics
1. Project Structure:
   - Created the project structure with directories for assets, source files, and header files.
   - Added `bird.png`, `pipe.png`, and `background.png` to the `assets` folder.

2. Main Program Initialization:
   - Initialized the main program in `main.cpp` using SFML.
   - Created a window with the title "Flappy Bird" and set up the main game loop.

3. Bird Class:
   - Created `Bird.h` and `Bird.cpp` to define the Bird class.
   - Implemented the Bird class with properties such as sprite, texture, velocity, gravity, and flap strength.
   - Added methods to handle bird movement (`update`), drawing (`draw`), and flapping (`flap`).

4 Pipe Class:
   - Created `Pipe.h` and `Pipe.cpp` to define the Pipe class.
   - Implemented the Pipe class with properties such as sprite, texture, and speed.
   - Added methods to handle pipe movement (`update`), drawing (`draw`), and getting the bounding box (`getBounds`).

5. Debugging and Error Handling:
   - Added error handling to check if textures are successfully loaded.
   - Included debugging statements to output relevant information during the game's execution.

--- a/Flappy Birds/Flappy Birds.vcxproj
+++ b/Flappy Birds/Flappy Birds.vcxproj
@@ -135,9 +135,11 @@
   <ItemGroup>
     <ClCompile Include="Bird.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Pipe.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bird.h" />
+    <ClInclude Include="Pipe.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
