Implement Pipe Management and Rendering with Collision Detection
- Added a static vector `pipes` in the Pipe class to manage all pipe instances.
- Implemented static methods for adding, updating, and drawing pipes.
- Defined static member `pipes` in Pipe.cpp to ensure proper allocation.
- Updated `main.cpp` to use static methods and the static getter function for pipe management.
- Fixed rendering issues to correctly display both bird and pipe sprites.
- Implemented collision detection between the bird and pipes.
- Added error handling for texture loading.

Changes include:
- Pipe class header and source files updated to handle pipe management and rendering.
- Main game loop updated for pipe management and collision detection.
- Verified successful rendering of bird and pipe sprites.
- Ensured collision detection logic correctly identifies interactions between the bird and pipes.

This update improves game logic by centralizing pipe management, fixing rendering issues, and adding collision detection.

--- a/Flappy Birds/Flappy Birds.vcxproj
+++ b/Flappy Birds/Flappy Birds.vcxproj
@@ -133,11 +133,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Background.cpp" />
     <ClCompile Include="Bird.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Pipe.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Background.h" />
     <ClInclude Include="Bird.h" />
     <ClInclude Include="Pipe.h" />
   </ItemGroup>
